src/app/layout/styles/_content.scss
@media (min-width: 768px) and (max-width: 1024px) {
    html, body {
        font-size: 10px;
    }
}

.main-content {
    position: relative;
    z-index: 1;
    width: 100%;
    height: calc(100vh - #{$header-height-mobile} + 300px); /* add 300px to include filter navigation */

    @media (min-width: 768px) {
        &.footer-active {
            height: calc(100vh - #{$header-height-desktop} - 100px);
        }
    }

    &.layout-root {
        display: flex;
        @media (min-width: 768px) {
            height: calc(100vh - #{$header-height-desktop} - 50px);
        }
    }

    &.layout-detail,
    &.layout-flat {
        height: calc(100vh - #{$header-height-mobile} - 30px); /* 30px pour la toolbar-actions */
        @media (min-width: 768px) {
            height: calc(100vh - #{$header-height-desktop} - 50px);
        }
    }


}

.view-content {
    position: relative;
    z-index: 5;

    display: flex;

    width: 100%;
    height: 100%;

    flex: 1;
}

.resultsview-pane {
    position: relative;

    flex: 1;

    height: 100%;

    transition: left .3s ease, padding .3s ease, margin .3s ease;
    .viewportfilter {
        padding: 5px 2em;
        height: 30px;
        position: relative;
        z-index: 2;
        background: white;
        box-shadow: 0 5px 15px rgba(0, 0, 0, .2);
    }
}

.map-pane {
    flex: 1;
    width: 50%;

    z-index: 1;
    overflow: hidden;
    box-shadow: 0 10px 30px 0 rgba(0, 0, 0, .5);
}

.results-pane {
    z-index: 0;
}

@media (min-width: 768px) {
    .toggle-pane-controls {
        position: absolute;
        z-index: 9;
        top: 0;
        bottom: 0;
        left: 0;
        display: flex;
        overflow: visible;

        width: 0;

        transition: width .3s ease;

        // background-color: rgba(255, 255, 255, .8);
        box-shadow: 40px 0 30px rgba(#000, .2) inset;

        align-items: stretch;

        &.aside-pane-controls {
            left: 0;
            .stripe svg * {
                fill: white;
            }
        }
    }
}

.toggle-pane-toggle {
    margin: 0;
    padding-right: 1em;
    padding-left: .5em;

    transition: all 150ms ease;
    @include transitionfuse;

    color: rgba(#000, .25);
    border: none;
    outline: none;
    background-color: transparent;
    .stripe {
        display: inline-block;

        margin: auto;

        vertical-align: middle;

        flex: 1;
        svg {
            display: block;

            fill: currentColor;
        }
    }
    &:hover {
        padding-left: 1em;

        color: rgba(#000, .5);
    }
    @media (max-width: 767px) {
        display: none;
    }
}

.fold-results {
    &.toggle-pane-controls {
        width: 5%;
    }
    .toggle-pane-toggle {
        width: 70%;
        svg {
            transform: rotate(180deg);
        }
    }
    &.results-pane {
        margin-right: -90%;
    }
}

.fold-aside {
    &.toggle-pane-controls {
        width: 20%;
        left: 0;
    }
    .toggle-pane-toggle {
        width: 40%;
        svg {
            transform: rotate(180deg);
        }
    }
    &.detail-aside-pane {
        margin-right: -21%;
    }
}


@media (max-width: 767px) {
    .layout-root {
        .resultsview-pane {
            position: absolute;
            top: 0;
            left: 100%;

            width: 100%;
        }

        .map-pane {
            width: 100%;

            .global-filters,
            .filters-tags {
                left: 0;
            }
        }

        .map-mode {
            .map-pane {
                position: absolute !important;
                left: 0;
            }
            .results-pane {
                left: 100%;
            }
        }
        .results-mode {
            .map-pane {
                left: -100%;
            }
            .results-pane {
                left: 0;
            }
        }
    }
}

.global-filters {
    z-index: 1;
}
.leaflet-container {
    z-index: 0;
}
.filters-tags {
    z-index: 1;
}

